--- a/Gatunos/media.css
+++ b/Gatunos/media.css
@@ -24,6 +24,7 @@
 .Menu-principal {
     display: flex;
     justify-content: space-around;
+    background-color:rgb(156, 192, 189);
 }
 
 .Menu-principal ul {
@@ -40,14 +41,14 @@
 
 #titulo-marca {
     text-align: center;
-    color: black;
+    color: rgb(7, 7, 6);
     font-size: 80px;   
 }
 
 #subtitulo-marca {
     text-align: center;
-    color: black;
-    font-size: 20px;
+    color: rgb(238, 157, 6);
+    font-size: 30px;
 }
 
 
@@ -127,6 +128,21 @@ ul,li {
     color: rgb(176, 49, 226);
     border-radius: 25px;
 }
+
+span {
+    color: red;
+    font-size: 10px;
+}
+
+label {
+    font-size: 20px;
+}
+
+radio {
+    font-size: 5px;
+}
+
+
 
 @media screen{
 }
