--- a/Gatunos/media.css
+++ b/Gatunos/media.css
@@ -3,10 +3,11 @@
     width:150px;
 }
 
-#titulo-primario {
+#titulo-hacer {
     text-align: center;
     font-size: 50px;
-    background-color: cadetblue;
+    color: rgb(199, 120, 17);
+    background-color: rgb(40, 54, 54);
     border-radius: 25px;
 }
 
@@ -102,6 +103,14 @@ ul,li {
     margin: 0px;
     border: 0px;
 }
+
+#imgp {
+    width: 1500px;
+    height: 500px;
+    padding: 30px;
+    margin: 10px;
+    border: 5px;
+}
  
 #texto-parrafo1{
     display: flex;
@@ -153,4 +162,17 @@ radio {
         background-color: purple;
     }
 }
-
+/*carrusel*/
+#carrusel{
+    top: 500;
+  }
+       #carrusel .item{
+           background: none;
+           height: 600px;
+       }
+       #carrusel .item img{
+           min-width: 1500px;
+           height: auto;
+       } 
+  
+  
